# distributeddatamgr_file

./: README.md  README_zh.md  bundle.json  ohos.build
interfaces/kits/js/: @ohos.document.d.ts  @ohos.environment.d.ts  @ohos.filepicker.d.ts  @ohos.fileshare.d.ts  @ohos.statfs.d.ts  @system.devicesmgr.d.ts  BUILD.gn
interfaces/kits/js/src/common/: ability_helper.cpp  ability_helper.h  file_filter.h  log.h  uni_error.cpp  uni_error.h
interfaces/kits/js/src/common/file_helper/: fd_guard.cpp  fd_guard.h  hash_file.cpp  hash_file.h
interfaces/kits/js/src/common/napi/: n_class.cpp  n_class.h  n_exporter.h  n_func_arg.cpp  n_func_arg.h  n_val.cpp  n_val.h  uni_header.h
interfaces/kits/js/src/mod_document/: document_n_exporter.cpp  document_n_exporter.h  document_napi.cpp  document_napi.h
interfaces/kits/js/src/mod_environment/: environment_n_exporter.cpp  environment_n_exporter.h  environment_napi.cpp  environment_napi.h
interfaces/kits/js/src/mod_file/: common_func.h
interfaces/kits/js/src/mod_file/class_file/: file_n_exporter.cpp  file_n_exporter.h
interfaces/kits/js/src/mod_fileio/: common_func.cpp  common_func.h  module.cpp
interfaces/kits/js/src/mod_fileio/class_constants/: constants.cpp  constants.h
interfaces/kits/js/src/mod_fileio/class_dir/: dir_entity.h  dir_n_exporter.cpp  dir_n_exporter.h
interfaces/kits/js/src/mod_fileio/class_dirent/: dirent_n_exporter.cpp
interfaces/kits/js/src/mod_fileio/class_randomaccessfile/: randomaccessfile_n_exporter.cpp
interfaces/kits/js/src/mod_fileio/class_stat/: stat_n_exporter.cpp  stat_n_exporter.h
interfaces/kits/js/src/mod_fileio/class_stream/: flush.cpp  stream_entity.h  stream_n_exporter.cpp
interfaces/kits/js/src/mod_fileio/class_watcher/: watcher_entity.h  watcher_n_exporter.cpp  watcher_n_exporter.h
interfaces/kits/js/src/mod_fileio/properties/: chmod.cpp  chown.cpp  close.cpp  copy_file.cpp  copy_file.h  create_randomaccessfile.cpp  create_stream.cpp  create_stream.h  fchmod.cpp  fchown.cpp  fdatasync.cpp  fdatasync.h  fdopen_stream.cpp  fstat.cpp  fsync.cpp  ftruncate.cpp  ftruncate.h  hash.cpp  lchown.cpp  (+21 more)
interfaces/kits/js/src/mod_securitylabel/: security_label.h  securitylabel_n_exporter.cpp  securitylabel_n_exporter.h  securitylabel_napi.cpp  securitylabel_napi.h
interfaces/kits/js/src/mod_statfs/: statfs_n_exporter.cpp  statfs_n_exporter.h  statfs_napi.cpp  statfs_napi.h
interfaces/kits/napi/: BUILD.gn
interfaces/kits/napi/common/: ability_helper.h  common_func.h  log.h  uni_error.cpp  uni_error.h
interfaces/kits/napi/common/napi/: n_class.cpp  n_class.h  n_exporter.h  n_func_arg.cpp  n_func_arg.h  n_val.h  uni_header.h
interfaces/kits/napi/device_storage_manager/: device_sm_exporter.cpp  device_sm_exporter.h  module.h
interfaces/kits/napi/file_picker_service/: file_picker_exporter.cpp
interfaces/kits/napi/file_share_ability/: file_share_exporter.cpp  file_share_exporter.h  module.cpp
interfaces/kits/native/storage_service/: BUILD.gn  ss_crypto_api.h
services/device_storage_service/: BUILD.gn
services/device_storage_service/include/: device_storage_data_mgr.h  device_storage_event_handler.h
services/device_storage_service/include/ipc/: device_storage_service_stub.h  storage_service_task_proxy.h  storage_service_task_stub.h  storage_service_task_stub_impl.h
services/device_storage_service/include/model/: device_storage_constants.h  disk_info.h  parcel_macro.h
services/device_storage_service/src/: device_storage_data_mgr.cpp  device_storage_event_handler.cpp  device_storage_service.cpp  device_user_broadcast_subscriber.cpp
services/device_storage_service/src/ipc/: device_storage_service_proxy.cpp  device_storage_service_stub.cpp  storage_service_death_recipient.cpp  storage_service_task_proxy.cpp
services/device_storage_service/src/model/: volume_info.cpp
services/device_storage_service/test/unittest/src/: device_storage_data_mgr_test.cpp  device_storage_notify_test.cpp
services/storage_service/crypto/: BUILD.gn
services/storage_service/crypto/include/: crypto_policy.h  key_utils.h
services/storage_service/crypto/src/: fbe_crypto.cpp  key_utils.cpp
services/storage_service/utils/: BUILD.gn
services/storage_service/utils/include/: block_device.h  utils_string.h
services/storage_service/utils/src/: block_device.cpp  storage_utils.cpp  utils_file.cpp  utils_string.cpp
storage/diskmgr/frameworks/device_storage_manager/: BUILD.gn
storage/diskmgr/frameworks/device_storage_manager/include/: device_storage_manager_errors.h
storage/diskmgr/frameworks/device_storage_manager/src/: device_storage_manager.cpp
storage/diskmgr/frameworks/device_storage_manager/test/: BUILD.gn
storage/diskmgr/frameworks/file_manager_service/: BUILD.gn
storage/diskmgr/frameworks/file_manager_service/include/: file_info.h  file_share_ability.h  fms_utils.h  log_util.h  path_strategy.h  shared_path_strategy.h  storage_ability.h
storage/diskmgr/frameworks/file_manager_service/src/: file_info.cpp  file_share_ability.cpp  fms_utils.cpp  shared_path_strategy.cpp  storage_ability.cpp
storage/diskmgr/frameworks/file_manager_service/test/: BUILD.gn
storage/diskmgr/services/: BUILD.gn  storage.cfg
storage/diskmgr/services/device_storage_service/: BUILD.gn
storage/diskmgr/services/device_storage_service/include/: device_storage_service.h  device_storage_service_errors.h  device_storage_service_hilog.h  device_user_broadcast_subscriber.h
storage/diskmgr/services/device_storage_service/src/: device_storage_data_mgr.cpp  device_storage_event_handler.cpp  device_storage_service.cpp  device_user_broadcast_subscriber.cpp
storage/diskmgr/services/device_storage_service/test/: BUILD.gn
storage/diskmgr/services/fs_manager/include/: ext4.h  filesystem_log.h  filesystem_manager.h  fs_mgr.h  fs_mount_tab.h
storage/diskmgr/services/fs_manager/src/: filesystem_manager.cpp  fs_mgr.cpp  fs_mount_tab.cpp
storage/diskmgr/services/storage_service/: main.cpp
storage/diskmgr/services/storage_service/ss_sdcard/: BUILD.gn  ss_sdcard.cpp
storage/diskmgr/services/test/: ss_test.cpp
(+199 files in other folders)
