# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/appexecfwk/standard/services/bundlemgr/appexecfwk_bundlemgr.gni")

config("storage_diskmgr_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "//utils/system/safwk/native/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/frameworks/device_storage_manager/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/interface/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/interface/include/interface",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/device_storage_service/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}
ohos_shared_library("device_storage_service") {
  sources = [
    "../storage_service/interface/src/interface/storage_service_callback_stub.cpp",
    "src/device_storage_data_mgr.cpp",
    "src/device_storage_event_handler.cpp",
    "src/device_storage_service.cpp",
    "src/device_user_broadcast_subscriber.cpp",
    "src/ipc/device_storage_service_proxy.cpp",
    "src/ipc/device_storage_service_stub.cpp",
    "src/ipc/storage_service_death_recipient.cpp",
    "src/ipc/storage_service_proxy.cpp",
    "src/ipc/storage_service_task_proxy.cpp",
    "src/ipc/storage_service_task_stub.cpp",
    "src/ipc/storage_service_task_stub_impl.cpp",
    "src/model/disk_info.cpp",
    "src/model/volume_info.cpp",
  ]
  include_dirs = [
    "${appexecfwk_path}/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/appexecfwk/standard/services/bundlemgr/include",
    "//third_party/json/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/",
    "//base/notification/ces_standard/cesfwk/kits/native/include",
    "preferences/include",
  ]
  deps = [
    "${common_path}:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/appexecfwk/standard/services/bundlemgr:libbms",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "native_appdatamgr:native_preferences",
    "permission_standard:libpermissionsdk_standard",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
  configs = [ ":storage_diskmgr_config" ]
  subsystem_name = "distributeddatamgr"
  part_name = "storage_standard"
}
