# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributeddatamgr/distributedfile/distributedfile_aafwk.gni")

common_src = [
  "common/napi/n_class.cpp",
  "common/napi/n_func_arg.cpp",
  "common/napi/n_val.cpp",
  "common/uni_error.cpp",
  "common/ability_helper.cpp",
  "common/common_func.cpp",
]

ohos_shared_library("fileshare") {
  relative_install_dir = "module"

  include_dirs = [
    "//third_party/node/src",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/bounds_checking_function/include",
  ]

  sources = common_src
  sources += [
    "file_share_ability/file_share_exporter.cpp",
    "file_share_ability/module.cpp",
  ]

  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "//foundation/arkui/napi:ace_napi",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "storage_standard"
}

ohos_shared_library("devicesmgr") {
  relative_install_dir = "module"

  include_dirs = [
    "//third_party/node/src",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/bounds_checking_function/include",
    "//utils/system/safwk/native/include",
  ]

  sources = common_src
  sources += [
    "device_storage_manager/device_sm_exporter.cpp",
    "device_storage_manager/module.cpp",
  ]

  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "//foundation/arkui/napi:ace_napi",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "storage_standard"
}

ohos_shared_library("filepicker") {
  relative_install_dir = "module"

  include_dirs = [
    "//third_party/node/src",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/bounds_checking_function/include",
    "//utils/system/safwk/native/include",
  ]

  sources = common_src
  sources += [
    "file_picker_service/file_picker_exporter.cpp",
    "file_picker_service/module.cpp",
  ]

  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "storage_standard"
}

group("build_kits_napi") {
  deps = [
    ":devicesmgr",
    ":filepicker",
    ":fileshare",
  ]
}
