# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("storage_service_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "../utils/include",
    "../manager/include",
    "../interface/include",
    "../include",
    "//third_party/openssl/include/openssl",
    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
    "//utils/system/safwk/native/include",
    "//third_party/json/include",
    "//utils/native/base/include",
    "//third_party/openssl/include",
    "../../fs_manager/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("crypto_public_config") {
  include_dirs = [
    "//third_party/openssl/include/openssl",
    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
    "//third_party/json/include",
  ]
}

ohos_static_library("ss_crypto") {
  sources = [
    "src/crypto_path.cpp",
    "src/crypto_policy.cpp",
    "src/fbe_crypto.cpp",
    "src/key_ctrl.cpp",
    "src/key_utils.cpp",
  ]

  public_deps = [ "//utils/native/base:utils" ]
  public_configs = [ ":crypto_public_config" ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "huks_standard:libhukssdk",
  ]

  configs = [ ":storage_service_config" ]
}
