# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("ss_utils_config") {
  include_dirs = [
    "include",
    "../interface/include",
    "//utils/system/safwk/native/include",
    "//utils/native/base/include",
  ]
}
ohos_static_library("libss_utils") {
  sources = [
    "src/block_device.cpp",
    "src/storage_utils.cpp",
    "src/utils_file.cpp",
    "src/utils_string.cpp",
  ]

  include_dirs = [
    "include",
    "../interface/include",
  ]

  public_configs = [ ":ss_utils_config" ]
  deps = []
  public_deps = [ "//utils/native/base:utils" ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}
