# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("ss_crypto_api") {
  sources = [ "ss_crypto_api.cpp" ]
  include_dirs = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/interfaces/kits/native/storage_service",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/crypto/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/interface",
    "include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/device_storage_service/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/event_handler/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/utils/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/storage/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/interface/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//third_party/openssl/include/openssl",
    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
    "//utils/system/safwk/native/include",
    "//third_party/json/include",
    "//utils/native/base/include",
    "//third_party/openssl/include",
  ]
  deps = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services:storage_service",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/device_storage_service:device_storage_service",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "aafwk_standard:want",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "storage_standard"
}
