# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("device_storage_manager") {
  include_dirs = [
    "//utils/system/safwk/native/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/frameworks/device_storage_manager/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/device_storage_service/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/interface/include",
  ]

  sources = [ "src/device_storage_manager.cpp" ]

  deps = [
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/device_storage_service/:device_storage_service",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "storage_standard"
}

# Unittest
group("test") {
  testonly = true
  deps = [ "test:test" ]
}
